--- a/ML_for_Process_Systems_Engineering.ipynb
+++ b/ML_for_Process_Systems_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2mzX4ePbrIEL5yFvCrEcp",
+      "authorship_tag": "ABX9TyPddjY2BKdh6idHRerPCCDV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "cI5KpwNWyBKP"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "id": "h_GBgWZMywja",
         "outputId": "148aaa33-1858-442a-c59b-71217a45e680"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "id": "ftyslAd9zJdc",
         "outputId": "4f49d0cf-e3c5-4aae-e353-33c600629666"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "elSYZl121mhK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
         "id": "IbEpaEH412Ff",
         "outputId": "65d5d6a0-703a-4939-e495-6c99a9a9c343"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
         "id": "Y5TR6M7n2PMY",
         "outputId": "617232c7-a7cf-4207-a137-fb1c746be6dd"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "ik2elXjq2ldt"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -458,7 +458,7 @@
       "metadata": {
         "id": "9FDyDzG2FMDA"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
         "id": "--osK6EcF5tw",
         "outputId": "309b31b5-bd0c-4483-c3bf-796137c52d32"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +508,7 @@
         "id": "_Ni8D1xTF64G",
         "outputId": "212f1c31-85a2-49c1-cb03-c532b33198de"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +541,7 @@
         "id": "jdonfD2CHf82",
         "outputId": "284f166b-4292-4296-d4e6-4aee688bdf5c"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
       "metadata": {
         "id": "1Gm7t7cTIE5t"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
         "id": "824k11TQIZ6l",
         "outputId": "7696d769-189a-4427-a64d-21c59c403918"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -612,7 +612,7 @@
         "id": "JhlrNipLIcsl",
         "outputId": "310e40be-3449-4bba-8a19-96c2ce8828d9"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +641,7 @@
         "id": "Qd7f4lEhIntT",
         "outputId": "710830ab-98c7-4fa4-e8ec-c18abbd4bf81"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
       "metadata": {
         "id": "elAIxmVWI8yM"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +706,7 @@
       "metadata": {
         "id": "Wem1maUHPwET"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -722,7 +722,7 @@
         "id": "etHqngd6QcbI",
         "outputId": "66d31c77-396b-4d52-e5aa-0d0fafa193cc"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
       "metadata": {
         "id": "Od9yZLrrQfSv"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
         "id": "JQrckTxFQwBT",
         "outputId": "98e66432-7478-43ef-ba7a-bfa323a1d2ab"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +781,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# One-hot encoding"
+        "### One-hot encoding"
       ],
       "metadata": {
         "id": "BYFnCmDobzvF"
@@ -795,7 +795,7 @@
       "metadata": {
         "id": "wHMob8UVb3Ov"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -814,43 +814,49 @@
       "metadata": {
         "id": "Lr2Ml31tb8Vn"
       },
-      "execution_count": 63,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Workflow automation via pipelines"
+      ],
+      "metadata": {
+        "id": "v7-24vpVdxCi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
+        "from sklearn.linear_model import LinearRegression"
+      ],
+      "metadata": {
+        "id": "9rmMrKt1d0A4"
+      },
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_encoded"
+        "pipe = Pipeline([('poly', PolynomialFeatures(degree=2, include_bias=False)),\n",
+        "                 ('scaler', StandardScaler()),\n",
+        "                 ('model', LinearRegression())])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yjSdKmofcSAL",
-        "outputId": "d43982ef-aa21-43aa-d443-236701ab7af8"
+        "id": "qlCwNJQoPlyG"
       },
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1., 0., 0.],\n",
-              "       [0., 0., 1.],\n",
-              "       [0., 1., 0.],\n",
-              "       [0., 0., 1.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 64
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "d9WnEDv_cYJ4"
+        "id": "qllZk-UtQGGx"
       },
       "execution_count": null,
       "outputs": []
