--- a/ML_for_Process_Systems_Engineering.ipynb
+++ b/ML_for_Process_Systems_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlDFjOMhGsYDzr/13uICxS",
+      "authorship_tag": "ABX9TyMpHH8apFnD0gPhFYUSe0Hs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "cI5KpwNWyBKP"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "elSYZl121mhK"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "ik2elXjq2ldt"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -837,7 +837,7 @@
       "metadata": {
         "id": "9rmMrKt1d0A4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +869,7 @@
         "id": "qlCwNJQoPlyG",
         "outputId": "653f34ea-c364-4bb8-a7c1-9aa946cebe66"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
       "metadata": {
         "id": "9ywd6T2ERRPj"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -947,9 +947,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qllZk-UtQGGx",
-        "outputId": "69dd20f8-e287-4a7e-f09d-007130f060ce"
+        "outputId": "80607ca6-7e0a-425b-f946-984af706cc3b"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +964,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -980,7 +980,7 @@
         "id": "UMbVzJRHTBjS",
         "outputId": "b1361917-ff85-4748-cf5b-bd632c36cdae"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,10 +997,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# Classification metrics\n"
+        "# Classification metrics\n",
+        "# Holdout method / Cross-validation\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=1)\n"
       ],
       "metadata": {
         "id": "nGZ88WIFTDyl"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zT8YLWdkWkrV"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wAGm2eIrWmcz"
       },
       "execution_count": null,
       "outputs": []
