--- a/ML_for_Process_Systems_Engineering.ipynb
+++ b/ML_for_Process_Systems_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNS7xytztLzfY/oCnUfMWJA",
+      "authorship_tag": "ABX9TyM4LO08bj5q24iS1fAPK6ky",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1321,10 +1321,187 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Variable Selection / Feature Selection"
+      ],
+      "metadata": {
+        "id": "6e8kEhctwfM1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Filter Methods"
+      ],
+      "metadata": {
+        "id": "W_3fpWGaztxF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.loadtxt('VSdata.csv', delimiter=',')"
+      ],
+      "metadata": {
+        "id": "iegpYyPyurVk"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = data[:,0]\n",
+        "x = data[:, 1:]"
+      ],
+      "metadata": {
+        "id": "TqTrRaQSycgr"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# compute linear correlation-based scores\n",
+        "from sklearn.feature_selection import SelectKBest\n",
+        "from sklearn.feature_selection import f_regression\n"
+      ],
+      "metadata": {
+        "id": "ftJgnrcoyeRG"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "VSmodel = SelectKBest(f_regression, k=10).fit(x, y)\n",
+        "input_scores = VSmodel.scores_"
+      ],
+      "metadata": {
+        "id": "EFs7W2Nr2bUb"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_scores"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vruSBS4N21E2",
+        "outputId": "88d44b5b-217f-46f1-8960-18ecd90c39cc"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.58054554e-01, 9.56982590e-07, 1.06741202e-02, 7.13517910e-02,\n",
+              "       1.00220380e+00, 1.95081540e-01, 5.78214081e-04, 5.28794820e-03,\n",
+              "       1.00480482e-01, 1.03726309e-02, 1.34835584e-01, 6.71665197e-02,\n",
+              "       3.06953819e-02, 9.53686270e-01, 1.31552949e-01, 3.79521770e-03,\n",
+              "       5.68236645e-05, 8.72546619e-02, 9.80420682e-01, 5.88523724e+00,\n",
+              "       1.02040870e+01, 1.68050590e+01, 4.62986741e-01, 6.96314987e+00,\n",
+              "       7.16226729e-01, 8.92436878e-01, 1.27677836e+00, 1.82109167e+00,\n",
+              "       3.07480730e+00, 4.64043235e+00, 2.36122731e+00, 2.96796543e+00,\n",
+              "       5.45006498e-02, 2.59400142e-03, 1.53338601e-02, 8.61795433e-02,\n",
+              "       2.91853013e-01, 4.46758182e-02, 9.96211066e-02, 2.46061366e-01])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "top_k_inputs = np.argsort(input_scores)[::-1][:10] + 1\n",
+        "top_k_inputs"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hpAYxer-2-Xq",
+        "outputId": "b0de2f32-12cd-4424-d62d-0107941294f5"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([22, 21, 24, 20, 30, 29, 32, 31, 28, 27])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_relevant = VSmodel.transform(x)\n"
+      ],
+      "metadata": {
+        "id": "z77qIRfh3cp8"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_relevant"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vmz4Axvc38dZ",
+        "outputId": "028acbd2-caec-46fc-ff54-ed9291bc5cff"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.15486547, -0.04881263,  0.38144335, ..., -0.78455145,\n",
+              "        -0.29969342, -0.10379533],\n",
+              "       [-1.95122274, -1.69288627, -1.59527093, ..., -1.15110967,\n",
+              "        -0.99727205, -0.70573805],\n",
+              "       [ 0.35140753, -0.15804939,  0.32304342, ...,  0.26284399,\n",
+              "         1.09216376,  0.46159997],\n",
+              "       ...,\n",
+              "       [-1.95393842, -1.84657783, -1.80026639, ..., -0.56115751,\n",
+              "        -0.63222009, -0.62396926],\n",
+              "       [ 0.34333865,  0.92960083, -0.02763106, ..., -0.2536824 ,\n",
+              "        -0.61593931,  0.16337718],\n",
+              "       [-1.66156668, -1.80878542, -2.19656192, ...,  0.39785562,\n",
+              "        -0.27177255,  0.15069307]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iegpYyPyurVk"
+        "id": "UCOhdpqY4Foo"
       },
       "execution_count": null,
       "outputs": []
