--- a/ML_for_Process_Systems_Engineering.ipynb
+++ b/ML_for_Process_Systems_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqf7TnJI6AtRS1FuVN7AvK",
+      "authorship_tag": "ABX9TyMHCgMMUdcaAkDryLf0LUa3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1532,9 +1532,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# fit Lasso model\n",
+        "from sklearn.linear_model import LassoCV\n",
+        "\n",
+        "Lasso_model = LassoCV(cv=5).fit(X_scaled, y_scaled.ravel())\n",
+        "\n",
+        "# find the relevant inputs using model coefficients\n",
+        "top_k_inputs = np.argsort(abs(Lasso_model.coef_))[::-1][:10] + 1\n",
+        "print('Relevant inputs: ', top_k_inputs)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eJz1aw0n-5cY",
+        "outputId": "46066885-1889-43c9-9da9-d8b3a06daea8"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Relevant inputs:  [21 22 20 23 24 19 25 18 33 14]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "eJz1aw0n-5cY"
+        "id": "1PEeo-KrAru3"
       },
       "execution_count": null,
       "outputs": []
